--- a/src/Components/Utils/SideBar.css
+++ b/src/Components/Utils/SideBar.css
@@ -54,7 +54,7 @@
 }
 
 #SideBar .content .menu_item:hover {
-  background-color: #22201e;
+  background-color: #797be2;
   width: 100%;
   height: 200%;
   border-collapse: collapse;
