--- a/src/Components/Users/Member/Dashboard/dashboard.css
+++ b/src/Components/Users/Member/Dashboard/dashboard.css
@@ -2,7 +2,6 @@
   background-color: rgb(248, 247, 250);
   background-image: none !important;
   display: flex;
-  flex-direction: column;
   width: 100vw;
   height: 100vh;
   overflow-y: auto;
@@ -10,69 +9,14 @@
 
 #main_dashboard .dashboard_graphs {
   width: 100%;
-  height: 100%;
-  background-color: rgb(235, 234, 239);
+  background-color: rgb(248, 247, 250);
   background-image: none !important;
   display: flex !important;
   flex-direction: column;
 }
 
 #main_dashboard .dashboard_graphs .widgets {
-  /* display: flex;
-  padding-right: 50%;
+  display: flex;
   height: auto;
-  gap: 20px; */
-  height: 300px;
-  width: 970px;
-  margin-right: auto;
-  margin-left: auto;
-
-}
-
-#main_dashboard .dashboard_graphs .widgets .first {
-  float: left;
-  height: 300px;
-  width: 303px;
-  margin: 10px;
-  color: #FFFFFF;
-
-}
-
-#main_dashboard .dashboard_graphs .widgets .second {
-  float: left;
-  height: 300px;
-  width: 303px;
-  margin: 10px;
-  color: #FFFFFF;
-
-}
-
-#main_dashboard .dashboard_barcharts_group {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: row;
-}
-
-#main_dashboard .dashboard_barchart {
-  margin: 20px;
-}
-
-#main_dashboard .dashboard_donutchart {
-  margin: 20px;
-}
-
-#main_dashboard .active_table_ingym {
-  width: 100%;
-  -webkit-box-shadow: 20px 40px 10px 1px rgba(237, 231, 231, 0.47);
-  box-shadow: 15px 4px 10px 1px rgba(14, 14, 14, 0.244);
-  border-radius: 10px;
-  height: 150px;
-  color: black;
-}
-
-#main_dashboard .main_div {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  gap: 20px;
 }
