--- a/src/Components/Users/Member/Measurements/measurement.css
+++ b/src/Components/Users/Member/Measurements/measurement.css
@@ -1,16 +1,10 @@
 .Measurement {
     width: 100%;
     display: flex;
-    margin: 0px 20px;
-    padding: 30px;
+    margin: 0px;
+    padding: 5px;
     border-radius: 10px;
     cursor: pointer;
     -webkit-box-shadow: 20px 40px 10px 1px rgba(237, 231, 231, 0.47);
     box-shadow: 15px 4px 10px 1px rgba(14, 14, 14, 0.244);
-}
-
-.Measurement .titlem {
-    text-decoration-style: double;
-    color: rgb(252, 171, 78);
-
 }
