--- a/src/Components/Users/Owner/Dashboard/dashboard.css
+++ b/src/Components/Users/Owner/Dashboard/dashboard.css
@@ -38,6 +38,8 @@
 
 #main_dashboard .active_table_ingym {
   width: 100%;
+  justify-content: center;
+  text-align: center;
   -webkit-box-shadow: 20px 40px 10px 1px rgba(237, 231, 231, 0.47);
   box-shadow: 15px 4px 10px 1px rgba(14, 14, 14, 0.244);
   border-radius: 10px;
